Fix Webamp context menu z-index
(broken since before updating webamp)

--- a/layout.css
+++ b/layout.css
@@ -263,3 +263,7 @@ html, body {
 .loading-program * {
 	cursor: progress;
 }
+
+#webamp-context-menu {
+	z-index: 5000000 !important;
+}
